--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "q": "./lib/bower-components/q/q.js",
     "text!enketo-config": "./config.json",
     "jquery.touchswipe": "./lib/jquery-touchswipe/jquery.touchSwipe.js",
-    "jquery.xpath": "./lib/jquery-xpath/jquery.xpath.js",
     "merge-xml": "./lib/bower-components/mergexml/mergexml.js",
     "xpath": "./lib/xpath/build/enketo-xpathjs.js",
     "leaflet": "./lib/bower-components/leaflet/dist/leaflet.js",
@@ -58,6 +57,7 @@
     "./lib/xpath/build/enketo-xpathjs.js": "XPathJS"
   },
   "dependencies": {
-    "jquery": "2.1.x"
+    "jquery": "2.1.x",
+    "jquery-xpath-basic": "1.0.x"
   }
 }
