--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
   },
   "browser": {
     "text!enketo-config": "./config.json",
-    "jquery.touchswipe": "./lib/jquery-touchswipe/jquery.touchSwipe.js",
     "merge-xml": "./lib/bower-components/mergexml/mergexml.js",
     "xpath": "./lib/xpath/build/enketo-xpathjs.js",
     "leaflet": "./lib/bower-components/leaflet/dist/leaflet.js",
@@ -57,6 +56,7 @@
   },
   "dependencies": {
     "jquery": "2.1.x",
+    "jquery-touchswipe": "1.6.x",
     "jquery-xpath-basic": "1.0.x",
     "q": "1.4.x"
   }
