changed: install bootstrap slider with npm

--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "text!enketo-config": "./config.json",
     "merge-xml": "./lib/bower-components/mergexml/mergexml.js",
     "xpath": "./lib/xpath/build/enketo-xpathjs.js",
-    "bootstrap-slider": "./lib/bootstrap-slider/js/bootstrap-slider.js",
     "widgets": "./src/js/widgets.js"
   },
   "browserify": {
@@ -54,6 +53,7 @@
     "./lib/xpath/build/enketo-xpathjs.js": "XPathJS"
   },
   "dependencies": {
+    "bootstrap-slider-basic": "^3.0.2",
     "jquery": "2.1.x",
     "jquery-touchswipe": "1.6.x",
     "jquery-xpath-basic": "1.0.x",
