--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "widgets": "./src/js/widgets.js"
   },
   "dependencies": {
-    "bootstrap-slider-basic": "^3.0.2",
-    "enketo-xpathjs": "^1.2.2",
     "bootstrap-datepicker": "^1.4.0",
+    "bootstrap-slider-basic": "3.0.x",
+    "enketo-xpathjs": "1.2.x",
     "jquery": "2.1.x",
     "jquery-touchswipe": "1.6.x",
     "jquery-xpath-basic": "1.0.x",
