changed: install bootstrap-timepicker with npm

--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
     "widgets": "./src/js/widgets.js"
   },
   "dependencies": {
-    "bootstrap-datepicker": "^1.4.0",
+    "bootstrap-datepicker": "1.4.x",
     "bootstrap-slider-basic": "3.0.x",
+    "bootstrap-timepicker": "0.2.x",
     "enketo-xpathjs": "1.2.x",
     "jquery": "2.1.x",
     "jquery-touchswipe": "1.6.x",
