--- a/config.json
+++ b/config.json
@@ -1,2 +1,11 @@
 {
+    "maps": [ {
+        "tiles": [ "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png" ],
+        "name": "streets",
+        "attribution": "Map data © <a href=\"http://openstreetmap.org\">OpenStreetMap</a> contributors"
+    }, {
+        "tiles": "GOOGLE_SATELLITE",
+        "name": "satellite"
+    } ],
+    "googleApiKey": ""
 }
