Fix dependency definition for openrosa-xpath-evaluator
Was listed as a devDependency, but actually a prod depdendency.

--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
         "karma-phantomjs-launcher": "0.2.x",
         "karma-safari-launcher": "0.1.x",
         "load-grunt-tasks": "3.x.x",
-        "openrosa-xpath-evaluator": "git@github.com:alxndrsn/openrosa-xpath-evaluator.git#827e5a00f7ceba6bd688edb91755c63a44a62a07",
         "phantomjs": "1.9.x",
         "time-grunt": "1.x.x"
     },
@@ -59,5 +58,6 @@
         "leaflet": "0.7.x",
         "lie": "^3.0.1",
         "mergexml": "1.1.x"
+        "openrosa-xpath-evaluator": "git@github.com:alxndrsn/openrosa-xpath-evaluator.git#827e5a00f7ceba6bd688edb91755c63a44a62a07"
     }
 }
