Updated config inline with `master`; remove medic-specific dependency

--- a/package.json
+++ b/package.json
@@ -47,6 +47,10 @@
         "phantomjs": "1.9.x",
         "time-grunt": "1.x.x"
     },
+    "browser": {
+        "text!enketo-config": "./config.json",
+        "widgets": "./src/js/widgets.js"
+    },
     "dependencies": {
         "bootstrap-datepicker": "1.4.x",
         "bootstrap-slider-basic": "3.2.x",
@@ -57,7 +61,6 @@
         "jquery-xpath-basic": "1.0.x",
         "leaflet": "0.7.x",
         "lie": "^3.0.1",
-        "mergexml": "1.1.x",
-        "openrosa-xpath-evaluator": "git://github.com/alxndrsn/openrosa-xpath-evaluator.git#fb838bee3c71c3a0df2979237d2d0e2c143b9221"
+        "mergexml": "1.1.x"
     }
 }
